--- a/etc/mon.cfg
+++ b/etc/mon.cfg
@@ -10,8 +10,8 @@ log_level=5
 
 falcon_client=http://127.0.0.1:1988/v1/push
 
-#mysql hostname
-hostname=127.0.0.1
+#mysql endpoint
+endpoint=127.0.0.1
 
 [mysql]
 user=root
