fix #42 , add doc of ignore

--- a/etc/myMon.cfg
+++ b/etc/myMon.cfg
@@ -3,7 +3,7 @@
 basedir = .
 # 日志目录，默认日志文件为myMon.log,旧版本有log_file项，如果同时设置了，会优先采用log_file
 log_dir = .
-# 配置忽略的metric项
+# 配置报警忽略的metric项,依然会上报改metric，但原有的该metric项的报警策略将不会生效
 ignore_file = ./falconignore
 # 保存快照(process, innodb status)的目录
 snapshot_dir = ./snapshot
